# coursepaper3

./: .gitignore  README.md  pyproject.toml  readme.md
coursepaper3/: functions.py  main.py
operations/: operations.json
tests/test_functions/find_last_five/: result.json  test_find_last_five.py
tests/test_functions/show_last_five/: result.json  test_show_last_five.py
